# AzizInTheJungle

./: .gitignore  README.md
.github/workflows/: c-cpp.yml
script_test/: gregaire.sh  kamikaze.sh  peureu.sh
src/: Aquarium.h  Bestiole.cpp  Bestiole.h  BestioleUtil.cpp  BestioleUtil.h  CMakeLists.txt  Doxyfile  Fabrique.cpp  Fabrique.h  LifeManager.cpp  LifeManager.h  Makefile  Milieu.cpp  Milieu.h  UImg.h  compil.sh  main  main.cpp  mainpage.dox
src/Accessoire/: Accessoire.cpp  Accessoire.h  Camouflage.cpp  Camouflage.h  Carapace.cpp  Carapace.h  Nageoire.cpp  Nageoire.h
src/Comportement/: Comportement.cpp  Comportement.h  Gregaire.cpp  Gregaire.h  Kamikaze.cpp  Kamikaze.h  Peureux.cpp  Peureux.h  Prevoyant.cpp  Prevoyant.h
src/Perception/: Oreilles.cpp  Oreilles.h  Perception.cpp  Perception.h  Yeux.cpp  Yeux.h
src/perception/: Oreilles.cpp  Oreilles.h  Yeux.cpp  Yeux.h  perception.cpp  perception.h
